[package]
name = "wireguard-configure"
version = "0.1.1"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/endeav0r/wireguard-configure"
description = "Command-line configuration manager for wireguard"
license = "Apache-2.0"
readme = "README.md"


[dependencies]
clap = "2.32"
error-chain = "0.12"
ipnet = {version="1.2.1", features=["with-serde"]}
prettytable-rs = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"

[[bin]]
name = "wireguard-configure"
path = "src/main.rs"